# django-migration-and-seeding

./: .gitignore  README.md  db.sqlite3  migrate_and_seed.sh  pyproject.toml  revert_seed.py  revert_seed.sh
admin_birpen/: apps.py  models.py
admin_birpen/migrations/: 0001_initial.py  0002_alter_admin_username.py
core/: settings.py
pengumuman/: models.py
pengumuman/migrations/: 0001_initial.py
seed/: 0008_Admin.json  0010_Admin.json  0010_Pengumuman.json
